feat(univents): added payssage seller connect to events
